force-app/main/default/objects/ssot__VideoCall__dlm/fields/ssot__DurationInSecondsQuantity__c.field-meta.xml
<CustomField>
    <fullName>ssot__DurationInSecondsQuantity__c</fullName>
    <label>Duration in Seconds</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DurationInSecondsQuantity</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>