force-app/main/default/objects/ssot__VideoCall__dlm/fields/ssot__EndDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__EndDateTime__c</fullName>
    <label>Call End Date Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EndDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>DateTime</type>
</CustomField>