force-app/main/default/objects/ssot__VideoCall__dlm/fields/ssot__IsCallCoachingIncluded__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsCallCoachingIncluded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Call Coaching Included</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsCallCoachingIncluded</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>