force-app/main/default/objects/ssot__VideoCall__dlm/fields/ssot__IsDiarizationOptIn__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsDiarizationOptIn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Diarization Opt In</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsDiarizationOptIn</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>