force-app/main/default/objects/ssot__VideoCall__dlm/fields/ssot__rel_1726212201426_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1726212201426_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VideoCall_RelatedToId_map_Opportunit_rel</label>
    <referenceTo>ssot__Opportunity__dlm</referenceTo>
    <relationshipLabel>VideoCall_RelatedToId_map_Opportunit_rel</relationshipLabel>
    <relationshipName>rel_1726212201426_end</relationshipName>
    <type>Lookup</type>
</CustomField>