force-app/main/default/objects/ssot__VideoCall__dlm/fields/ssot__rel_1726825151916_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1726825151916_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VideoCall_RelatedToId_map_AccountCon_rel</label>
    <referenceTo>ssot__AccountContact__dlm</referenceTo>
    <relationshipLabel>VideoCall_RelatedToId_map_AccountCon_rel</relationshipLabel>
    <relationshipName>rel_1726825151916_end</relationshipName>
    <type>Lookup</type>
</CustomField>