force-app/main/default/objects/ssot__VideoCall__dlm/fields/ssot__StartDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__StartDateTime__c</fullName>
    <label>Call Start Date Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>StartDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>DateTime</type>
</CustomField>