force-app/main/default/objects/ssot__VideoCall__dlm/fields/ssot__TranscribedLanguage__c.field-meta.xml
<CustomField>
    <fullName>ssot__TranscribedLanguage__c</fullName>
    <label>Transcribed Language</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TranscribedLanguage</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>