force-app/main/default/objects/ssot__VideoCall__dlm/fields/ssot__VendorMeetingId__c.field-meta.xml
<CustomField>
    <fullName>ssot__VendorMeetingId__c</fullName>
    <label>Vendor Meeting ID</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>VendorMeetingId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>