force-app/main/default/objects/ssot__VideoCall__dlm/fields/ssot__VideoCall_RelatedToId_map_Lead_Id_N_1__c.field-meta.xml
<CustomField>
    <fullName>ssot__VideoCall_RelatedToId_map_Lead_Id_N_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VideoCall_RelatedToId_map_Lead_Id_N_1</label>
    <referenceTo>ssot__Lead__dlm</referenceTo>
    <relationshipLabel>VideoCall_RelatedToId_map_Lead_Id_N_1</relationshipLabel>
    <relationshipName>VideoCall_RelatedToId_map_Lead_Id_N_1</relationshipName>
    <type>Lookup</type>
</CustomField>