force-app/main/default/objects/ssot__VideoCall__dlm/fields/ssot__VideoCallType__c.field-meta.xml
<CustomField>
    <fullName>ssot__VideoCallType__c</fullName>
    <label>Video Call Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>VideoCallType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>